tests/sources/invalid/classes/constructor_static_with_receiver.fire
// Parser error: a (invalid) static constructor that also declares a
// borrowed '&this' receiver -- both the "constructors cannot be static"
// error and the "static methods cannot declare a receiver" error should
// fire while parsing the same declaration.

class Foo {
    x: int32;

    fn Foo(&this) {
        this.x = 0;  //~ ERROR FS-SEM-0001 @16
    }
}
